# prototypes

./: CMakeLists.txt  Logger.cpp  Logger.hpp  README.md
dynamic-library/: CMakeLists.txt  README.md  build.cmd  build.sh  function.cmake  java-monit.sh  prepare.cmd  prepare.sh  rebuild.cmd  rebuild.sh
dynamic-library/app/: CMakeLists.txt  main.cpp
dynamic-library/app-exe/: CMakeLists.txt  main.cpp
dynamic-library/app-java/: pom.xml
dynamic-library/app-java/src/main/java/pl/janczura/: Jni.java  Main.java
dynamic-library/jni/: CMakeLists.txt  pl_janczura_Jni.cpp  pl_janczura_Jni.hpp  pl_janczura_LibJni.cpp  pl_janczura_LibJni.hpp
dynamic-library/lib/: CMakeLists.txt  lib.cpp  lib.h
message_queue/: CMakeLists.txt
message_queue/consumer/: CMakeLists.txt  main.cpp
message_queue/libmq/: Base.cpp  Base.hpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  Publisher.cpp  Publisher.hpp
message_queue/publisher/: CMakeLists.txt
